- Added individualclaimwindow to take in claim attributes 	- display attributes as FXML

--- a/src/main/resources/view/IndividualClaimWindow.fxml
+++ b/src/main/resources/view/IndividualClaimWindow.fxml
@@ -12,16 +12,31 @@
     <Scene>
          <HBox alignment="CENTER">
             <children>
-               <Label fx:id="message" text="Label">
-                  <HBox.margin>
-                     <Insets right="5.0" />
-                  </HBox.margin>
-               </Label>
-               <Button fx:id="Done" mnemonicParsing="false"  text="Copy URL">
-                  <HBox.margin>
-                     <Insets left="5.0" />
-                  </HBox.margin>
-               </Button>
+                <Label fx:id="name" text="Label">
+                    <HBox.margin>
+                        <Insets right="5.0" />
+                    </HBox.margin>
+                </Label>
+                <Label fx:id="contact" text="Label">
+                    <HBox.margin>
+                        <Insets right="5.0" />
+                    </HBox.margin>
+                </Label>
+                <Label fx:id="date" text="Label">
+                    <HBox.margin>
+                        <Insets right="5.0" />
+                    </HBox.margin>
+                </Label>
+                <Label fx:id="amount" text="Label">
+                    <HBox.margin>
+                        <Insets right="5.0" />
+                    </HBox.margin>
+                </Label>
+                <Label fx:id="description" text="Label">
+                    <HBox.margin>
+                        <Insets right="5.0" />
+                    </HBox.margin>
+                </Label>
             </children>
             <opaqueInsets>
                <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
