--- a/src/main/resources/view/IndividualClaimWindow.fxml
+++ b/src/main/resources/view/IndividualClaimWindow.fxml
@@ -7,44 +7,45 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.stage.Stage?>
 
+<?import javafx.scene.layout.VBox?>
 <fx:root resizable="false" title="IndividualClaim" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
   <scene>
     <Scene>
-         <HBox alignment="CENTER">
+         <VBox alignment="CENTER">
             <children>
                 <Label fx:id="name" text="Label">
                     <HBox.margin>
-                        <Insets right="5.0" />
+                        <Insets right="20.0" />
                     </HBox.margin>
                 </Label>
                 <Label fx:id="contact" text="Label">
                     <HBox.margin>
-                        <Insets right="5.0" />
+                        <Insets right="20.0" />
                     </HBox.margin>
                 </Label>
                 <Label fx:id="date" text="Label">
                     <HBox.margin>
-                        <Insets right="5.0" />
+                        <Insets right="20.0" />
                     </HBox.margin>
                 </Label>
                 <Label fx:id="amount" text="Label">
                     <HBox.margin>
-                        <Insets right="5.0" />
+                        <Insets right="20.0" />
                     </HBox.margin>
                 </Label>
                 <Label fx:id="description" text="Label">
                     <HBox.margin>
-                        <Insets right="5.0" />
+                        <Insets right="20.0" />
                     </HBox.margin>
                 </Label>
             </children>
             <opaqueInsets>
-               <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+               <Insets bottom="100.0" left="60.0" right="100.0" top="60.0" />
             </opaqueInsets>
             <padding>
-               <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
+               <Insets bottom="100.0" left="60.0" right="100.0" top="60.0" />
             </padding>
-         </HBox>
+         </VBox>
     </Scene>
   </scene>
 </fx:root>
