--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -24,12 +24,15 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="planName" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <FlowPane fx:id="tasks" />
-      <Label fx:id="planDescription" styleClass="cell_small_label" text="\$planDescription" />
-      <Label fx:id="startDate" styleClass="cell_small_label" text="\$startDate" />
-      <Label fx:id="endDate" styleClass="cell_small_label" text="\$endDate" />
+      <FlowPane fx:id="tags" />
+      <Label fx:id="author" styleClass="cell_small_label" text="\$author" />
+      <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
+      <Label fx:id="weblink" styleClass="cell_small_label" text="\$webLink" />
+      <Label fx:id="difficulty" styleClass="cell_small_label" text="\$difficulty" />
+      <Label fx:id="remark" styleClass="cell_small_label" text="\$remark" />
+      <Label fx:id="source" styleClass="cell_small_label" text="\$source" />
     </VBox>
   </GridPane>
 </HBox>
