--- a/src/main/resources/view/MainWindowCopy.fxml
+++ b/src/main/resources/view/MainWindowCopy.fxml
@@ -3,20 +3,18 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 <?import javafx.stage.Stage?>
 
 <fx:root minHeight="800.0" minWidth="800.0" onCloseRequest="#handleExit" title="Address App" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
@@ -45,8 +43,8 @@
                 <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="236.59998168945313" minHeight="10.0" prefHeight="83.20000610351562" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="433.4000076293945" minHeight="10.0" prefHeight="415.9999938964844" vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <VBox GridPane.columnIndex="1">
@@ -83,28 +81,6 @@
                         <Insets left="20.0" top="20.0" />
                      </GridPane.margin>
                   </ImageView>
-                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <children>
-                        <StackPane HBox.hgrow="ALWAYS">
-                           <children>
-                              <Label fx:id="qnLabel" text="Label" textFill="WHITE">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font></Label>
-                           </children></StackPane>
-                        <Separator blendMode="HARD_LIGHT" orientation="VERTICAL" prefHeight="200.0" style=": ;" />
-                        <StackPane HBox.hgrow="ALWAYS">
-                           <children>
-                              <Label fx:id="ansLabel" text="Label" textFill="WHITE">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font></Label>
-                           </children></StackPane>
-                     </children>
-                     <padding>
-                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-                     </padding>
-                  </HBox>
                   <VBox alignment="CENTER" GridPane.rowIndex="1">
                      <children>
                         <StackPane>
@@ -154,6 +130,22 @@
                         <Insets bottom="5.0" left="25.0" right="5.0" top="5.0" />
                      </padding>
                   </VBox>
+                  <TabPane tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <tabs>
+                        <Tab text="FlashcardTab">
+                            <fx:include fx:id="FlashcardTab" source="FlashcardTab.fxml" />
+                        </Tab>
+                        <Tab text="NotesTab">
+                            <fx:include fx:id="NotesTab" source="NotesTab.fxml" />
+                        </Tab>
+                        <Tab text="CheatsheetTab">
+                            <fx:include fx:id="CheatsheetTab" source="CheatsheetTab.fxml" />
+                        </Tab>
+                    </tabs>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="50.0" right="25.0" top="10.0" />
+                     </GridPane.margin>
+                  </TabPane>
                </children>
                <VBox.margin>
                   <Insets />
