--- a/src/main/resources/view/expenses/ExpenditureCard.fxml
+++ b/src/main/resources/view/expenses/ExpenditureCard.fxml
@@ -8,7 +8,8 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+
+<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
@@ -25,6 +26,7 @@
                     </minWidth>
                 </Label>
                 <Label fx:id="nameLabel" styleClass="cell_big_label" text="\$name" />
+                <Label fx:id="budgetLabel" styleClass="cell_big_label" text="\$budget" />
             </HBox>
         </VBox>
       <rowConstraints>
