--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -174,6 +174,16 @@
     -fx-text-fill: white;
 }
 
+.tab:selected {
+    -fx-background-color: #424d5f;
+    -fx-border-color: #3e7b91;
+    -fx-border-width: 1;
+}
+
+.tab .label {
+    -fx-text-fill: white;
+}
+
 .grid-pane {
     -fx-background-color: derive(#1d1d1d, 30%);
     -fx-border-color: derive(#1d1d1d, 30%);
