--- a/src/main/resources/view/expenses/ExpensesPage.fxml
+++ b/src/main/resources/view/expenses/ExpensesPage.fxml
@@ -71,7 +71,9 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="totalBudgetLabel" text="\$TotalBudget" GridPane.rowIndex="3" />
+                  <Label fx:id="totalBudgetLabel" text="\$TotalBudget" GridPane.rowIndex="1" />
+                  <Label fx:id="totalExpenditureLabel" text="\$TotalExpenditure" GridPane.rowIndex="2" />
+                  <Label fx:id="budgetLeftLabel" text="\$BudgetLeft" GridPane.rowIndex="3" />
                </children>
             </GridPane>
              <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" vvalue="1.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0">
