--- a/src/main/resources/view/expenses/ExpenditureCard.fxml
+++ b/src/main/resources/view/expenses/ExpenditureCard.fxml
@@ -9,12 +9,12 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane HBox.hgrow="ALWAYS">
+<HBox id="cardPane" fx:id="cardPane" prefHeight="41.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <GridPane prefHeight="34.0" prefWidth="150.0" HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
         </columnConstraints>
-        <VBox fx:id="propertiesContainer" alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+        <VBox fx:id="propertiesContainer" alignment="CENTER_LEFT" minHeight="38.0" prefHeight="38.0" prefWidth="150.0" GridPane.columnIndex="0">
             <padding>
                 <Insets bottom="5" left="15" right="5" top="5" />
             </padding>
@@ -27,6 +27,7 @@
                 </Label>
                 <Label fx:id="nameLabel" styleClass="cell_big_label" text="\$name" />
                 <Label fx:id="budgetLabel" styleClass="cell_big_label" text="\$budget" />
+                <Label fx:id="dayLabel" styleClass="cell_big_label" text="\$dayNumber" />
             </HBox>
         </VBox>
       <rowConstraints>
