Update naming to fit context

--- a/src/main/resources/view/FinanceWindow.fxml
+++ b/src/main/resources/view/FinanceWindow.fxml
@@ -44,7 +44,7 @@
           </padding>
         </StackPane>
 
-        <VBox fx:id="personList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+        <VBox fx:id="logEntryList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
           <padding>
             <Insets bottom="10" left="10" right="10" top="10" />
           </padding>
