--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -307,6 +307,11 @@
     -fx-padding: 8 1 8 1;
 }
 
+.chart-pie-label {
+    -fx-fill: white;
+    -fx-font-size: 1em;
+}
+
 #cardPane {
     -fx-background-color: transparent;
     -fx-border-width: 0;
