--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -46,21 +46,30 @@
           </padding>
         </StackPane>
 
-        <HBox minWidth="450" prefWidth="450" styleClass="pane-with-border">
-          <VBox fx:id="noteList" styleClass="pane-with-border" minWidth="440" prefWidth="440" VBox.vgrow="ALWAYS">
-            <padding>
-              <Insets top="10" right="10" bottom="10" left="10" />
-            </padding>
-            <StackPane fx:id="noteListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-          </VBox>
+        <StackPane minWidth="450" prefWidth="450" styleClass="pane-with-border">
+          <HBox fx:id="mainPanel" minWidth="450" prefWidth="450" styleClass="pane-with-border">
+            <VBox fx:id="noteList" styleClass="pane-with-border" minWidth="440" prefWidth="440" VBox.vgrow="ALWAYS">
+              <padding>
+                <Insets top="10" right="10" bottom="10" left="10" />
+              </padding>
+              <StackPane fx:id="noteListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+            </VBox>
 
-          <VBox fx:id="taskList" styleClass="pane-with-border" minWidth="440" prefWidth="440" VBox.vgrow="ALWAYS">
+            <VBox fx:id="taskList" styleClass="pane-with-border" minWidth="440" prefWidth="440" VBox.vgrow="ALWAYS">
+              <padding>
+                <Insets top="10" right="10" bottom="10" left="10" />
+              </padding>
+              <StackPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+            </VBox>
+          </HBox>
+
+          <VBox fx:id="stats" styleClass="pane-with-border" minWidth="440" prefWidth="440" VBox.vgrow="ALWAYS">
             <padding>
               <Insets top="10" right="10" bottom="10" left="10" />
             </padding>
-            <StackPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+            <StackPane fx:id="statsPanelPlaceholder" VBox.vgrow="ALWAYS"/>
           </VBox>
-        </HBox>
+        </StackPane>
 
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
       </VBox>
