--- a/src/main/resources/view/StatsChart.fxml
+++ b/src/main/resources/view/StatsChart.fxml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
 
-
-<PieChart id="piechart" xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1" />
+<VBox xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1">
+   <PieChart fx:id="pc" styleClass="chart-pie-label"/>
+   <Label fx:id="overview" text="Label" styleClass="label-bright"/>
+</VBox>
