--- a/src/main/resources/view/AnnotationParagraphCard.fxml
+++ b/src/main/resources/view/AnnotationParagraphCard.fxml
@@ -3,31 +3,31 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane HBox.hgrow="ALWAYS">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
-        </columnConstraints>
-        <HBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
-            <padding>
-                <Insets top="5" right="5" bottom="5" left="15" />
-            </padding>
+
+        <padding>
+            <Insets top="5" right="5" bottom="5" left="15" />
+        </padding>
+        <VBox maxWidth="100" prefWidth="50">
             <Label fx:id="id" styleClass="cell_small_label" />
-            <HBox spacing="5" alignment="CENTER_LEFT">
-                <Label fx:id="para" styleClass="cell_big_label" wrapText="true">
-                    <minWidth>
-                        <!-- Ensures that the label text is never truncated -->
-                        <Region fx:constant="USE_PREF_SIZE" />
-                    </minWidth>
-                </Label>
-            </HBox>
-            <Label fx:id="note" styleClass="cell_small_label" wrapText="true" />
+        </VBox>
+        <HBox spacing="5" alignment="CENTER_LEFT">
+            <Label fx:id="para" styleClass="cell_big_label" wrapText="true">
+                <minWidth>
+                    <!-- Ensures that the label text is never truncated -->
+                    <Region fx:constant="USE_PREF_SIZE" />
+                </minWidth>
+            </Label>
         </HBox>
-    </GridPane>
+        <VBox>
+            <Label fx:id="note" styleClass="cell_small_label" wrapText="true" />
+        </VBox>
+
+
 </HBox>
