--- a/src/main/resources/view/OfflinePanel.fxml
+++ b/src/main/resources/view/OfflinePanel.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.StackPane?>
-<ScrollPane xmlns:fx="http://javafx.com/fxml/1"
-            prefHeight="400.0" prefWidth="600.0">
+<ScrollPane xmlns:fx="http://javafx.com/fxml/1" fitToHeight="true" fitToWidth="true">
     <VBox>
         <TextField fx:id="dummyField" />
     </VBox>
-    <VBox fx:id="annotationList" maxWidth="340" minWidth="340" prefWidth="340"
+    <VBox fx:id="annotationList"
           styleClass="pane-with-border" VBox.vgrow="NEVER">
         <padding>
             <Insets bottom="10" left="10" right="10" top="10" />
