Updated GUI to the UI concept design (#55)
* Updated GUI to the UI concept

add: Used Icons from docs to create 32x32 pixels icons for Application usage in resources folder
chore: Moved UI elements to follow UI design
chore: Added Send button for mouse click
chore: Added Title labels for main Appointment and Patient addressbook
chore: Updated App Icon with product icon and added Icon to menu bar

* Replaced Squished Icons with 1:1 aspect ratio

fix: Replaced badly cropped icons with proper 1:1 icons with help from @Q-gabe

--- a/src/main/resources/view/CommandBox.fxml
+++ b/src/main/resources/view/CommandBox.fxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<StackPane styleClass="stack-pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <TextField fx:id="commandTextField" onAction="#handleCommandEntered" promptText="Enter command here..."/>
+<StackPane styleClass="stack-pane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+  <TextField fx:id="commandTextField" onAction="#handleCommandEntered" prefHeight="25.0" prefWidth="205.0" promptText="How may I help you?">
+      <font>
+         <Font name="Gill Sans MT Italic" size="13.0" />
+      </font></TextField>
+   <Button mnemonicParsing="false" onMouseClicked="#handleCommandEntered" text="Send" StackPane.alignment="CENTER_RIGHT" />
 </StackPane>
-
