--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -18,3 +18,16 @@
 .tooltip-text {
     -fx-text-fill: white;
 }
+
+ //Style of each column header's label  in the tableView
+.table-view .column-header-background .label{
+     -fx-background-color: transparent;
+    -fx-font-weight:bold;
+    -fx-text-fill: white;
+    -fx-font-size:15px;
+}
+
+.table-view .table-cell {
+    -fx-font-weight:bold;
+    -fx-font-size:15px;
+}
