--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -20,6 +20,7 @@
 .label-header {
     -fx-font-size: 32pt;
     -fx-font-family: "Segoe UI Light";
+    -fx-fill: #11d30b;
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
@@ -123,7 +124,7 @@
 .cell_big_label {
     -fx-font-family: "Segoe UI Semibold";
     -fx-font-size: 16px;
-    -fx-text-fill: #010504;
+    -fx-text-fill: #F5F5F5;
 }
 
 .cell_small_label {
