--- a/src/main/resources/view/StatsChart.fxml
+++ b/src/main/resources/view/StatsChart.fxml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<VBox xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1">
-   <PieChart fx:id="pc" styleClass="chart-pie-label"/>
-   <Label fx:id="overview" text="Label" styleClass="label-bright"/>
-</VBox>
+<ScrollPane fitToHeight="true" fitToWidth="true" styleClass="stats-pane-color" xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1">
+    <content>
+        <AnchorPane styleClass="stats-pane-color">
+            <children>
+                <PieChart fx:id="pc" styleClass="chart-pie-label">
+               <padding>
+                  <Insets left="20.0" />
+               </padding></PieChart>
+                <Label fx:id="overview" styleClass="label-bright" text="Label" />
+            </children></AnchorPane>
+    </content>
+</ScrollPane>
