--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -18,3 +18,9 @@
 .tooltip-text {
     -fx-text-fill: white;
 }
+
+.individual-date-pane {
+    -fx-background-color: white;
+    -fx-border-color: black;
+    -fx-border-width: 0.5 0.5 0.5 0.5;
+}
