--- a/src/main/resources/view/ProjectListCard.fxml
+++ b/src/main/resources/view/ProjectListCard.fxml
@@ -28,6 +28,8 @@
                 <Label fx:id="title" text="\$first" styleClass="cell_big_label" />
             </HBox>
             <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
+            <Label fx:id="taskTitle" styleClass="cell_big_label" text="\$taskTitle" />
+            <FlowPane fx:id="tasks" />
         </VBox>
     </GridPane>
 </HBox>
